--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "expo-asset": "latest",
     "expo-file-system": "latest",
     "expo-gl": "latest",
+    "framer-motion": "^12.23.26",
     "gsap": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
@@ -69,7 +70,7 @@
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
     "stripe": "^20.0.0",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "latest",
     "vaul": "^1.1.2",
