--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.87.1",
     "@types/nodemailer": "^7.0.4",
+    "@types/prismjs": "^1.26.5",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -56,11 +57,13 @@
     "expo-gl": "latest",
     "framer-motion": "^12.23.26",
     "gsap": "latest",
+    "highlight.js": "^11.11.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "16.0.7",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.11",
+    "prismjs": "^1.30.0",
     "react": "^19.2.3",
     "react-day-picker": "9.8.0",
     "react-dom": "^19.2.3",
