--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-day-picker": "9.8.0",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.60.0",
+    "react-masonry-css": "^1.0.16",
     "react-native": "latest",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
