--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@react-three/fiber": "latest",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.87.1",
+    "@types/matter-js": "^0.20.2",
     "@types/nodemailer": "^7.0.4",
     "@types/prismjs": "^1.26.5",
     "@vercel/analytics": "latest",
@@ -57,13 +58,16 @@
     "expo-file-system": "latest",
     "expo-gl": "latest",
     "framer-motion": "^12.23.26",
-    "gsap": "latest",
+    "gsap": "^3.13.0",
     "highlight.js": "^11.11.1",
     "input-otp": "1.4.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
+    "matter-js": "^0.20.0",
     "next": "16.0.7",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.11",
+    "poly-decomp": "^0.3.0",
     "prismjs": "^1.30.0",
     "react": "^19.2.3",
     "react-day-picker": "9.8.0",
@@ -76,6 +80,7 @@
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
     "stripe": "^20.0.0",
+    "svg-path-commander": "^2.1.11",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "latest",
