--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@react-email/components": "^1.0.1",
-    "@react-three/drei": "latest",
-    "@react-three/fiber": "latest",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.87.1",
     "@types/matter-js": "^0.20.2",
@@ -63,6 +63,7 @@
     "input-otp": "1.4.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
+    "maath": "^0.10.8",
     "matter-js": "^0.20.0",
     "next": "16.0.7",
     "next-themes": "^0.4.6",
@@ -83,7 +84,7 @@
     "svg-path-commander": "^2.1.11",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "latest",
+    "three": "^0.167.1",
     "vaul": "^1.1.2",
     "zod": "3.25.76"
   },
